plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.rustam'
version = '1.0.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {


	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'
	implementation 'org.liquibase:liquibase-core'
	implementation 'org.modelmapper:modelmapper:3.2.0'
	implementation "io.jsonwebtoken:jjwt-api:0.11.2"
	implementation "io.jsonwebtoken:jjwt-impl:0.11.2"
	implementation "com.fasterxml.uuid:java-uuid-generator:4.0.1"
	implementation "io.jsonwebtoken:jjwt-jackson:0.11.2"
	implementation 'org.postgresql:postgresql:42.7.3'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Lombok
	annotationProcessor 'org.projectlombok:lombok'

	// Apache POI
	implementation 'org.apache.poi:poi-ooxml:5.4.0'

	// MockMultipartFile üçün əlavə edin:
	implementation 'org.springframework:spring-test:6.0.12'

	// Mapper
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
}

tasks.named('test') {
	useJUnitPlatform()
}
